qa/apps/portal/ingresses.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: portal
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - portal.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: portal.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: portal
            servicePort: 80
